tests/NormalTests/paczka1/fuzzy1/24926647.err
Error in line 2: 8TqjOFwoX2x S82 69,1
Error in line 9: xE8 S82 79,7
Error in line 12: 4kKPAUD6y S207 97,5
Error in line 15: A873 S82 59,6
Error in line 29: A873 S207 88,7
Error in line 36: xE8 A873 74,9
